# media-archive-sync

./: .coderabbit.yaml  .gitconfig  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
.githooks/: pre-commit  pre-push
.github/workflows/: ci.yml  docker-build.yml  lint.yml  publish.yml
examples/: basic_download.py  custom_organizer.py
src/media_archive_sync/: __init__.py  cache.py  cli.py  config.py  crawler.py  display.py  downloader.py  logging.py  merge.py  nfo.py  organizer.py  strings.py
tests/: conftest.py  test_cache.py  test_cli.py  test_config.py  test_crawler.py  test_crawler_extended.py  test_display.py  test_display_extended.py  test_downloader.py  test_downloader_extended.py  test_init.py  test_logging.py  test_merge.py  test_nfo.py  test_organizer.py  test_strings.py
